--- a/pom.xml
+++ b/pom.xml
@@ -49,4 +49,56 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <forkMode>always</forkMode>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.7.201606060606</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com/revature/taskmaster/common/datasource/*</exclude>
+                        <exclude>com/revature/taskmaster/common/exceptions/*</exclude>
+                        <exclude>com/revature/taskmaster/common/Request.*</exclude>
+                        <exclude>com/revature/taskmaster/common/ErrorResponse.*</exclude>
+                        <exclude>com/revature/taskmaster/common/ResourceCreationResponse.*</exclude>
+                        <exclude>com/revature/taskmaster/common/Request.*</exclude>
+                        <exclude>com/revature/taskmaster/projects/*</exclude>
+                        <exclude>com/revature/taskmaster/auth/AuthServlet.*</exclude>
+                        <exclude>com/revature/taskmaster/auth/Credentials.*</exclude>
+                        <exclude>com/revature/taskmaster/users/NewUserRequest.*</exclude>
+                        <exclude>com/revature/taskmaster/users/UserResponse.*</exclude>
+                        <exclude>com/revature/taskmaster/users/UserDAO.*</exclude>
+                        <exclude>com/revature/taskmaster/users/UserServlet.*</exclude>
+                        <exclude>com/revature/taskmaster/users/Role.*</exclude>
+                        <exclude>com/revature/taskmaster/users/User.*</exclude>
+                        <exclude>com/revature/taskmaster/TaskmasterApp.*</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
