update buildspec.yml to tell CodeBuild to grab the right file from S3 during pipeline build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       java: corretto8
   pre_build:
     commands:
-      - aws s3 cp s3://taskmaster-resources/application.properties ./src/main/resources
+      - aws s3 cp s3://taskmaster-resources/application-deploy.yml ./src/main/resources
   build:
     commands:
       - mvn clean package -Dspring.profiles.active=test
